# creativity-graph

./: .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_2026-06-23.md  CODE_REVIEW_2026-06-24.md  IMPLEMENTATION-PLAN-creativity-graph-claude-code.md  PLAN_generative_layer.md  PROGRESS.md  README.md  RELEASE.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: adversarial-grounder.md  annotator.md  evaluator.md  extractor.md  generator.md  grounder.md
commands/: kg-build.md  kg-eval.md  kg-experiment.md  kg-generate.md  kg-ground.md  kg-perturb.md  kg-query.md  kg-view.md
examples/: source.md
hooks/: bootstrap.sh  hooks.json  precontext.mjs  precontext.py  provision.mjs  provision.ps1  provision.sh
pack/: glossary.md  pack.yaml
scripts/: _engine_resolve.mjs  bootstrap.py  canon_merge_driver.mjs  f4_probe.py  launch_server.mjs  launch_server.sh  validate_plugin.py
scripts/kg_engine/: __init__.py  atomicio.py  backend.py  boundary.py  canon.py  canonmerge.py  export.py  generate.py  graphio.py  groundaudit.py  harness.py  lightrag_arm.py  model.py  operations.py  pack.py  projector.py  reconciler.py  scrub.py  server.py  sources.py  waves.py
scripts/kg_engine/templates/: __init__.py  graph_html.py
skills/creativity-graph/: SKILL.md
skills/creativity-graph/references/: contract.md  pack-schema.md  tools.md
skills/sproutgraph/: SKILL.md
skills/sproutgraph/references/: contract.md  pack-schema.md  tools.md
tests/: conftest.py  test_agenda.py  test_backend.py  test_bootstrap.py  test_canonmerge.py  test_chaos.py  test_e2e_generative.py  test_explainpath.py  test_export.py  test_fix_backend.py  test_fix_boundary_model.py  test_fix_canon.py  test_fix_deferred.py  test_fix_metrics.py  test_fix_ops.py  test_fix_reconciler.py  test_fix_scrub.py  test_fix_server.py  test_fix_tooling.py  test_generate.py  test_groundaudit.py  test_grounding.py  test_hardening.py  test_harness.py  test_harness_convergence.py  test_hypothesized.py  test_invariants.py  test_launchers.py  test_manifests.py  test_merge.py  test_operations.py  test_pack.py  test_projector.py  test_reconciler.py  test_resilience.py  test_review_fixes.py  test_review_followup.py  test_review_sweep.py  test_rfix_a10.py  test_rfix_a11.py  (+12 more)
