[project]
name = "kg-engine"
version = "0.3.0"
description = "Deterministic graph engine for the creativity-graph Claude Code plugin"
requires-python = ">=3.10"
# Core, always-installed dependencies. Each is verified to install from wheels with no
# system build toolchain. The heavy/finicky optional layers live under [project.optional-dependencies]
# so a plain `uv sync` (the SessionStart bootstrap) never hard-fails on a user machine.
dependencies = [
    "mcp>=1.2",            # FastMCP server + tool surface (the graph engine interface)
    "pydantic>=2",         # the boundary contract (P_write validation)
    "networkx>=3",         # node-link graph.json interchange
    "pyyaml>=6",           # pack.yaml / glossary loader
    "python-igraph>=0.11", # graph backend for Leiden
    "leidenalg>=0.10",     # Leiden community detection
]

[project.optional-dependencies]
# Headless API-driven extraction backend (§2.2): the CI / non-interactive path. The in-session
# path needs no API keys; this extra is only for `python -m kg_engine.backend`.
# Floor is 0.77.0 (2026-01-29): the first SDK release that ships `output_config` on
# `messages.create()` for structured outputs. (0.73.0 only had the beta `output_format`
# parameter, which `backend.py` does not use — it calls `output_config={"format": ...}`.)
backend = ["anthropic>=0.77"]
# Test + dev tooling.
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/kg_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
