[project]
name = "kg-engine"
version = "0.6.0"
description = "Deterministic graph engine for the creativity-graph Claude Code plugin"
requires-python = ">=3.10"
# Core, always-installed dependencies. Each is verified to install from wheels with no
# system build toolchain. The heavy/finicky optional layers live under [project.optional-dependencies]
# so a plain `uv sync` (the SessionStart bootstrap) never hard-fails on a user machine.
dependencies = [
    # Upper bounds cap each below its next (unverified) major. Unlike the guarded igraph/leidenalg
    # imports below (which DEGRADE silently on a breaking bump), a breaking mcp/pydantic/networkx major
    # would fail LOUDLY at startup — but the no-uv pip-fallback install path (bootstrap.install_with_pip)
    # resolves these fresh from PyPI against THESE constraints, not uv.lock, so a cap is what stops a
    # fresh user venv from pulling an untested major. The primary uv path is pinned by uv.lock regardless.
    "mcp>=1.2,<2",         # FastMCP server + tool surface (the graph engine interface)
    "pydantic>=2,<3",      # the boundary contract (P_write validation)
    "networkx>=3,<4",      # node-link graph.json interchange
    "pyyaml>=6,<7",        # pack.yaml / glossary loader
    # Upper bounds pin BELOW the next (unverified) major so a fresh user venv can't silently pull a
    # breaking API change that the guarded _leiden import would degrade through rather than surface
    # (review-low). Verified working at igraph 1.0.0 / leidenalg 0.12.0; lift the cap after testing a
    # newer major.
    "python-igraph>=0.11,<2", # graph backend for Leiden
    # leidenalg stays a HARD dependency — it installs cleanly from wheels. It is kept here, not under
    # optional, because its DLL only fails to LOAD (not install) when Windows Smart App Control blocks
    # the unsigned native _c_leiden; that is handled by graceful degradation, not by dropping the dep.
    # bootstrap verifies it via a SOFT probe (not the mandatory import set) and projector._leiden
    # degrades to label propagation when the import fails, so a SAC-blocked DLL never breaks the engine.
    "leidenalg>=0.10,<1",     # Leiden community detection (optional at runtime — see note above)
]

[project.optional-dependencies]
# Headless API-driven extraction backend (§2.2): the CI / non-interactive path. The in-session
# path needs no API keys; this extra is only for `python -m kg_engine.backend`.
# Floor is 0.77.0 (2026-01-29): the first SDK release that ships `output_config` on
# `messages.create()` for structured outputs. (0.73.0 only had the beta `output_format`
# parameter, which `backend.py` does not use — it calls `output_config={"format": ...}`.)
backend = ["anthropic>=0.77"]
# Test + dev tooling.
dev = ["pytest>=8"]
# Optional `lightrag` ideation-experiment arm (§Stage 8): a real, published GraphRAG baseline
# (`kg_engine.lightrag_arm`) built over the SAME prose corpus as the flat `rag` arm. OFF by default —
# install it AND set `KG_LIGHTRAG=1` + `OPENAI_API_KEY` to enable; absent it, the experiment runs its
# original four arms unchanged. Bounded below its next (untested) major like every other dep.
lightrag = ["lightrag-hku>=1.4,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/kg_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
